--- a/SIMRS/pages-detail-pasien.html
+++ b/SIMRS/pages-detail-pasien.html
@@ -176,6 +176,10 @@
                 </li>
 
                 <li class="nav-item">
+                  <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-riwayat">Riwayat</button>
+                </li>
+
+                <li class="nav-item">
                   <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Edit Profile</button>
                 </li>
 
@@ -225,6 +229,47 @@
                     <li class="list-group-item">Cras justo odio</li>
                   </ol><!-- End List group Numbered -->
 
+                </div>
+
+                <div class="tab-pane fade profile-edit pt-3 text-center" id="profile-riwayat">                      
+                  <!-- Table with stripped rows -->
+                  <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">Tanggal</th>
+                        <th scope="col">Diagnosa</th>
+                        <th scope="col">Keterangan</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>2016-05-25</td>
+                        <td>Designer</td>
+                        <td>28</td>
+                      </tr>
+                      <tr>
+                        <td>2016-05-25</td>
+                        <td>Designer</td>
+                        <td>28</td>
+                      </tr>
+                      <tr>
+                        <td>2016-05-25</td>
+                        <td>Designer</td>
+                        <td>28</td>
+                      </tr>
+                      <tr>
+                        <td>2016-05-25</td>
+                        <td>Designer</td>
+                        <td>28</td>
+                      </tr>
+                      <tr>
+                        <td>2016-05-25</td>
+                        <td>Designer</td>
+                        <td>28</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  
                 </div>
 
                 <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
@@ -330,10 +375,6 @@
                       <button type="submit" class="btn btn-primary">Save Changes</button>
                     </div>
                   </form><!-- End Profile Edit Form -->
-
-                </div>
-
-                <div class="tab-pane fade pt-3" id="profile-change-password">
 
                 </div>
 
